[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
solana-program = "=1.17.14"
solana-program-test = "=1.17.14"
solana-sdk = "=1.17.14"
curve25519-dalek = "=3.2.1"
ed25519-dalek = "=1.0.1"