[package]
name = "stablecoin_factory"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablecoin_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "=1.17.14"  # Updated to a version that doesn't use yanked solana-rbpf
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
stablebond-sdk = "2.0.20"
switchboard-on-demand = "0.1.0"
subtle = "2.5.0"

[dev-dependencies]
solana-program-test = "=1.17.14"  # Matched with solana-program
solana-sdk = "=1.17.14"  # Matched with solana-program

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1